# ord-canister

./: .gitignore  840000.utxo.1  840000.utxo.2  840104.utxo.1  840104.utxo.2  840171.tx  840171.utxo.2  840755.tx  Cargo.toml  Dockerfile  LICENSE  README.md  canister_ids.json  canister_ids.json.20t  cmp.sh  compose.py  development-guide.md  dfx.json  ord-canister.did  ord_indexer.did  rust-toolchain.toml  rustfmt.toml
bitcoin-rpc-proxy/: Cargo.toml
bitcoin-rpc-proxy/src/: cli.rs  main.rs  proxy.rs
btc-rpc-proxy/: Cargo.toml
btc-rpc-proxy/src/: cache.rs  cli.rs  main.rs  proxy.rs
canister/: Cargo.toml  runes-indexer.did
canister/src/: bitcoin_api.rs  config.rs  ic_log.rs  index.rs  lib.rs  logs.rs  main.rs  notifier.rs  rpc.rs
canister/src/index/: entry.rs  reorg.rs  updater.rs
canister/src/index/updater/: rune_updater.rs
common-rpc-proxy/: Cargo.toml
common-rpc-proxy/src/: cli.rs  proxy.rs
crates/ordinals/: Cargo.toml
crates/ordinals/src/: lib.rs  rune.rs  rune_id.rs  spaced_rune.rs  terms.rs
interface/: Cargo.toml  README.md
interface/src/: lib.rs
src/: bitcoin_api.rs  btc_canister.rs  canister.rs  ic_log.rs  index.rs  lib.rs  memory.rs  notifier.rs  rpc.rs  runes.rs
src/index/: entry.rs  event.rs  lot.rs  reorg.rs  storage.rs  updater.rs
src/index/updater/: rune_updater.rs
tests/: 840000.tx  840104.tx  840171.utxo.1  840755.utxo.1  840755.utxo.2  cmp.sh
