[package]
name = "btc-rpc-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "btc-rpc-proxy"
path = "src/main.rs"

[dependencies]
hyper = { version = "1.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
lazy_static = "1.4"
unicase = "2.6"
hyper-tls = "0.6.0"
hyper-util = { version ="0.1", features = ["full"] }
bytes = "1"
http-body-util = "0.1.0"
clap = { version = "4.1.7", features = ["derive"] }
linked-hash-map = "0.5.6"
async-trait = "0.1.81"
