[package]
name = "runes-indexer"
version = "0.1.0"
authors = ["kachinsky@oct.network"]
repository = "https://github.com/octopus-network/ord-canister"
license = "MIT"
edition = "2021"

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-macros = "0.8"
ic-stable-structures = "0.6"
bincode = "1.3.3"

ic-cdk-timers = "0.6"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
syn = "1.0"
anyhow =  "1"
thiserror = "1"
generic-array = "0.14"
cfg-if = "1.0"
hex = "0.4.3"
core2 = "0.3"
bitcoin = { version = "0.32.5", features = ["rand"] }
bitcoincore-rpc-json = { version = "0.19.0", default-features = false }
bip39 = "2.0.0"
hex-literal = "0.4.1"
lazy_static = "1.4"
ordinals = "0.0.14"
sha2 = "0.10.8"
runes-indexer-interface = { path = "../interface" }
ic-canister-log = "0.2.0"
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-03-06_23-01+p2p" }
serde_derive = "1.0"
time = "0.3"
chrono = { version = "0.4.19", default-features = false }