[package]
name = "runes-indexer"
version = "0.1.0"
authors = ["kachinsky@oct.network"]
repository = "https://github.com/octopus-network/ord-canister"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1"
bincode = "1.3.3"
bitcoin = { version = "0.32.5", features = ["rand"] }
bitcoincore-rpc-json = { version = "0.19.0", default-features = false }
candid = "0.10"
chrono = { version = "0.4.19", default-features = false }
hex = "0.4.3"
ic-canister-log = "0.2.0"
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-03-06_23-01+p2p" }
ic-cdk = "0.12"
ic-cdk-macros = "0.8"
ic-cdk-timers = "0.6"
ic-stable-structures = "0.6"
lazy_static = "1.4"
ordinals = "0.0.14"
runes-indexer-interface = { path = "../interface" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10.8"
thiserror = "1"
time = "0.3"
